crates/atlas-runtime/tests/errors/single_pipe.atl
// Test: Single pipe instead of || (AT1001)
if (x | y) {
    print("wrong");
}
